[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
derive_more = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
anyhow = { version = "1.0", default-features = false }
thiserror = "2.0.12"
entity = { version = "0.1.0", path = "entity" }

[workspace]
members = [".", "entity"]
